# llms_agents

./: .gitignore  .gitmodules  AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.cursor/rules/: architecture-understanding.mdc  debug.mdc  directory-structure.mdc  error-documentation.mdc  implement.mdc  lessons-learned.mdc  memory.mdc  plan.mdc  rules.mdc
src/notebook_agent/: api.py
src/notebook_agent/agents/: __init__.py
src/notebook_agent/capabilities/: skill_install.py
src/notebook_agent/sandbox/: __init__.py  container.py
tests/: test_api.py
