[project]
name = "notebook_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "fire>=0.7.1",
    "pydantic-ai-skills[git]>=0.11.0",
    "pydantic-ai-slim[ag-ui,openai]>=1.104.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
